@@ -27,6 +27,7 @@ import java.util.Arrays;
 
 import org.apache.hadoop.hbase.HBaseConfiguration;
 import org.apache.hadoop.hbase.KeyValue;
+import org.apache.hadoop.hbase.io.HbaseObjectWritable;
 import org.apache.hadoop.io.ObjectWritable;
 
 /**
@@ -125,18 +126,16 @@ public abstract class CompareFilter implements Filter {
           compareOp.name());
     }
   }
-  
-  private static final HBaseConfiguration hbc = new HBaseConfiguration();
-  
+
   public void readFields(DataInput in) throws IOException {
     compareOp = CompareOp.valueOf(in.readUTF());
     comparator = (WritableByteArrayComparable)
-        ObjectWritable.readObject(in, hbc);
+      HbaseObjectWritable.readObject(in, null);
   }
 
   public void write(DataOutput out) throws IOException {
     out.writeUTF(compareOp.name());
-    ObjectWritable.writeObject(out, comparator,
-        WritableByteArrayComparable.class, hbc);
+    HbaseObjectWritable.writeObject(out, comparator,
+      WritableByteArrayComparable.class, null);
   }
 }
